syntax = "proto3";
package bot;

option go_package = ".;pb";

message MediaItem {
  string url = 1;
  bool is_video = 2;
}

// Get
message GetMediaFromInstagramRequest { string url = 1; }
message GetMediaFromInstagramResponse {
  string caption = 1;
  repeated MediaItem items = 2;
}

service BotService {
  rpc GetMediaFromInstagram(GetMediaFromInstagramRequest)
      returns (GetMediaFromInstagramResponse) {};
}
